<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:paddingBottom="40dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            tools:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:foregroundGravity="center"
            android:onClick="clickPerfil"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/usuario" />

        <EditText
            android:id="@+id/et_buscar"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_buscar"
            android:ems="10"
            android:hint="@string/txt_buscar"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="45dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/iv_buscar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:background="@color/pacific_blue"
            android:onClick="clickBuscar"
            app:layout_constraintBottom_toBottomOf="@+id/et_buscar"
            app:layout_constraintEnd_toEndOf="@+id/et_buscar"
            app:layout_constraintTop_toTopOf="@+id/et_buscar"
            app:srcCompat="@drawable/buscar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/txt_tendencias"
            android:textColor="@color/fluorescent_blue"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_buscar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/shape_button"
            android:onClick="clickVerMas"
            android:text="@string/txt_ver_mas"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_buscar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="365dp"
            android:layout_height="240dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/txt_categorias"
            android:textColor="@color/fluorescent_blue"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categorias"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>